@startuml loan-lifecycle-state-machine
!theme plain
title Ciclo de vida del préstamo — alineado a **LoanStatus** (@platam/shared)

state "ACTIVE\n(al día)" as ACTIVE
state "LATE\n(mora según política)" as LATE
state "DEFAULT\n(incumplimiento grave)" as DEFAULT
state "PAID\n(saldado)" as PAID
state "CANCELLED\n(cancelado)" as CANCELLED

[*] --> ACTIVE : Origen operativo\n(tabla loans en disbursement_schema;\nmodelo ORM mínimo hoy)

ACTIVE --> LATE : Incumplimiento de cuotas\nsegún calendario
LATE --> ACTIVE : Regularización\n(pagos que cubren mora)
LATE --> DEFAULT : Escalación según\npolítica de cartera
ACTIVE --> PAID : Saldo cero
LATE --> PAID : Liquidación total
DEFAULT --> PAID : Recuperación total\n(castigo / quita según negocio)
ACTIVE --> CANCELLED : Cancelación operativa
LATE --> CANCELLED : Cancelación operativa
DEFAULT --> CANCELLED : Baja definitiva

PAID --> [*]
CANCELLED --> [*]

note right of ACTIVE
  **DisbursementStatus** gobierna el movimiento
  de dinero (pending → disbursed | failed).
  **PaymentsStatus** aplica a registros de pago
  (applied, pending_review, reversed).
  Detalle de cuotas puede modelarse aparte
  cuando la entidad Loan se amplíe en ORM.
end note

@enduml
